--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -167,7 +167,7 @@ pages={201-224}
 
 @article{Brady13_Idris,
   title={Idris, a General Purpose Dependently Typed Programming Language: Design and Implementation},
-  author={BRADY, EDWIN}
+  author={Brady, Edwin}
   year={2013}
 }
 
