--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -26,7 +26,7 @@
 @inproceedings{odersky2005scalable,
   title={Scalable component abstractions},
   author={Odersky, Martin and Zenger, Matthias},
-  booktitle={ACM Sigplan Notices},
+  booktitle={ACM SIGPLAN Notices},
   volume={40},
   number={10},
   pages={41--57},
@@ -37,7 +37,7 @@
 @incollection{Odersky03_vObj,
 year={2003},
 isbn={978-3-540-40531-3},
-booktitle={ECOOP 2003 – Object-Oriented Programming},
+booktitle={ECOOP 2003 -- Object-Oriented Programming},
 volume={2743},
 series={Lecture Notes in Computer Science},
 editor={Cardelli, Luca},
@@ -45,7 +45,7 @@ doi={10.1007/978-3-540-45070-2_10},
 title={A Nominal Theory of Objects with Dependent Types},
 url={http://dx.doi.org/10.1007/978-3-540-45070-2_10},
 publisher={Springer Berlin Heidelberg},
-author={Odersky, Martin and Cremet, Vincent and Röckl, Christine and Zenger, Matthias},
+author={Odersky, Martin and Cremet, Vincent and R{\"o}ckl, Christine and Zenger, Matthias},
 pages={201-224}
 }
 
@@ -87,7 +87,7 @@ pages={201-224}
                  and jQuery APIs, among others, both in its statically
                  typed and dynamically typed flavors.},
    affiliation = {EPFL},
-   author      = {Doeraene, Sébastien},
+   author      = {Doeraene, S{\'e}bastien},
    details     = {http://infoscience.epfl.ch/record/190834},
    documenturl = {http://infoscience.epfl.ch/record/190834/files/scalajs-paper.pdf},
    keywords    = {interoperability; static types; dynamic types; Scala; JavaScript},
@@ -105,11 +105,11 @@ pages={201-224}
 @incollection{Lerner13_TypedJQuery,
   year={2013},
   author = "Lerner, BenjaminS. and Elberty, Liam and Li, Jincheng and Krishnamurthi, Shriram",
-  booktitle = "{ECOOP 2013 – Object-Oriented Programming}",
+  booktitle = "{ECOOP 2013 -- Object-Oriented Programming}",
   doi = "10.1007/978-3-642-39038-8_4",
   editor = "Castagna, Giuseppe",
   isbn = "978-3-642-39037-1",
-  pages = "79–103",
+  pages = "79--103",
   publisher = "Springer Berlin Heidelberg",
   series = "{Lecture Notes in Computer Science}",
   title = "{Combining Form and Function: Static Types for JQuery Programs}",
@@ -121,7 +121,7 @@ pages={201-224}
 @inproceedings{leijen1999domain,
   title={Domain specific embedded compilers},
   author={Leijen, Daan and Meijer, Erik},
-  booktitle={ACM Sigplan Notices},
+  booktitle={ACM SIGPLAN Notices},
   volume={35},
   number={1},
   pages={109--122},
@@ -166,9 +166,14 @@ pages={201-224}
 }
 
 @article{Brady13_Idris,
-  title={Idris, a General Purpose Dependently Typed Programming Language: Design and Implementation},
-  author={Brady, Edwin}
-  year={2013}
+  title={Idris, a general-purpose dependently typed programming language: Design and implementation},
+  author={Brady, Edwin},
+  journal={Journal of Functional Programming},
+  volume={23},
+  number={05},
+  pages={552--593},
+  year={2013},
+  publisher={Cambridge Univ Press}
 }
 
 @misc{czaplicki2012elm,
